# Lab8

./: CMakeLists.txt  Crc16.hpp  Crc32.hpp  DublicateHandler.cpp  DublicateHandler.hpp  FileSystem.cpp  FileSystem.hpp  IFileSystem.hpp  main.cpp
.github/workflows/: release.yml
